--- a/Sustainability/assets/css/style.css
+++ b/Sustainability/assets/css/style.css
@@ -17,27 +17,21 @@ header {
     z-index: 9999;
 }
 
-#first_section {
-    height: 100%;
-}
-
 .container {
     margin: 0 auto;
     max-width: 1280px;
 }
 
-#div_insights {
-    margin-top: 131px;
-}
-
-#insights {
+.span_with_line {
+    display: inline-block;
     font-size: 18px;
+    margin-top: 132px;
     position: relative;
 }
 
-#insights::before {
+.span_with_line::before {
     content: " ";
-    width: 50px;
+    width: 53px;
     height: 1px;
     position: absolute;
     right: -58px;
@@ -45,111 +39,139 @@ header {
     background-color: #FA6400;
 }
 
-#h_news {
+.flexeble {
+    display: flex;
+    gap: 270px;
+}
+
+.text_left_side {
     font-size: 80px;
     font-weight: normal;
-    width: 30%;
 }
 
-#img_in_first_div {
-    width: 100%;
-    height: 620px;
-    transition: .5s;
-}
-
-#span_near_news {
+.text_right_side {
     font-size: 14px;
-    width: 100%;
-}
-
-#first_div_under_news {
-    display: flex;
     margin-top: 40px;
+    line-height: 23px;
 }
 
-#about_news {
-    display: flex;
-    justify-content: space-between;
-}
-
-#span_news {
-    width: 40%;
-    margin-top: 50px;
-}
-
-#first_div_under_news {
-    background-color: #F9F9F9;
-    overflow: hidden;
-}
-
-#first_div_under_news:hover #img_first_div img {
-    transform: scale(1.1);
-}
-
-#h3_under_news {
-    font-size: 32px;
-    font-weight: 400;
+.left_side {
     width: 100%;
-    position: relative;
 }
 
-#h3_under_news a {
-    background: no-repeat 0 100%;
-    background-image: linear-gradient(currentColor, currentColor), linear-gradient(currentColor, currentColor), linear-gradient(currentColor, currentColor);
-    background-size: 0% 1px, 0% 1px, 0% 1px;
-    background-position: 0 45px, 0 66%, 0 100%;
-    transition: background-size .3s ease;
+.right_side {
+    width: 100%;
+}
+
+#background_img {
+    margin-top: 40px;
+    background-image: url("https://konstruktion.vamtam.com/wp-content/uploads/2022/11/GettyImages-1324029466.jpg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 585px;
+}
+
+.background_color {
+    background-color: #F9F9F9;
+    padding-bottom: 100px;
+}
+
+.text_left_side_h2 {
+    margin-top: 20px;
+    font-size: 64px;
+    font-weight: normal;
+    line-height: 1.1em;
+}
+
+.h4_in_box {
+    font-size: 24px;
+    font-weight: normal;
+}
+
+.text_in_box {
+    font-size: 14px;
+    line-height: 23px;
+}
+
+#four_boxes {
+    margin-top: 70px;
     display: flex;
-    width: 99%;
+    gap: 35px;
 }
 
-#h3_under_news a:hover,
-#h3_under_news a:focus {
-    background-size: 87% 1px, 77% 1px, 23.33% 1px;
-}
-
-#link_h {
-    color: black;
-}
-
-#link_h:hover {
-    color: #FA6400;
-}
-
-#h3_under_news:hover::after {
+.box {
     width: 23%;
 }
 
-#span_under_news {
-    color: #777;
-    display: inline-block;
-    width: 98%;
-    font-size: 14px;
-    display: inline-block;
-    margin-top: 20px;
+#not_scrolled {
+    background-image: url("https://konstruktion.vamtam.com/wp-content/uploads/2022/11/pexels-los-muertos-crew-8853510.jpg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 50%;
+    height: 100vh;
+    position: sticky;
+    top: 0;
+    left: 0;
 }
 
-#text_first_div {
-    width: 65%;
-    padding: 180px 110px 100px;
+#with_scroll {
+    margin-top: 130px;
+    position: relative;
+    padding-bottom: 140px;
 }
 
-#img_first_div {
-    width: 45%;
+#scrolled {
+    width: 40%;
+}
+
+#with_scroll .container {
     height: 100%;
-    transition: 1s;
-    overflow: hidden;
+    display: flex;
+    gap: 124px;
+}
+
+.big_text_near_scroll {
+    font-size: 64px;
+    font-weight: normal;
+    line-height: 1.1em;
+}
+
+.text_in_scroll {
+    margin-top: 320px;
+    padding-bottom: 150px;
+}
+
+#scrolled {
+    display: flex;
+    flex-direction: column;
+}
+
+.little_text_near_scroll {
+    margin-top: 35px;
+    font-size: 14px;
+    line-height: 25px;
+}
+
+#text_in_news {
+    font-size: 18px;
+    margin-top: 10px;
+}
+
+#news_div {
+    width: 18%;
 }
 
 #all_boxes {
     display: flex;
     gap: 121px;
-    margin-top: 60px;
+    margin-top: 135px;
     flex-wrap: wrap;
 }
 
 .boxes {
-    width: 27%;
+    width: 40%;
     height: 100%;
 }
 
@@ -186,6 +208,7 @@ header {
     color: black;
     font-size: 24px;
     font-weight: 400;
+    line-height: 30px;
 }
 
 .abouts_h:hover,
@@ -194,21 +217,9 @@ header {
     color: #FA6400;
 }
 
-#load_more {
-    height: 200px;
-    width: 100%;
+#insights {
     display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#load {
-    font-size: 14px;
-    transition: .3s;
-}
-
-#load:hover {
-    color: #FA6400;
+    gap: 200px;
 }
 
 #third_section {
@@ -440,22 +451,39 @@ footer {
 }
 
 @media screen and (max-width:1280px) {
-    #img_in_first_div {
-        height: 100%;
-        width: 100%;
-    }
     #all_boxes {
         gap: 95px
     }
     .container {
         max-width: 1000px;
     }
+    .flexeble {
+        display: flex;
+        gap: 10px;
+    }
+    .text_right_side {
+        font-size: 14px;
+        margin-top: 0px;
+        line-height: 23px;
+    }
+    .text_left_side {
+        font-size: 45px;
+    }
 }
 
 @media screen and (max-width:1000px) {
-    #span_news {
-        margin-top: 0px;
-        width: 100%;
+    .flexeble {
+        display: flex;
+        flex-direction: column;
+        gap: 0px;
+    }
+    .text_left_side_h2 {
+        font-size: 35px;
+    }
+    .text_right_side {
+        font-size: 14px;
+        margin-top: 10px;
+        line-height: 23px;
     }
     .big {
         width: 50% !important;
@@ -490,22 +518,8 @@ footer {
     .abouts_h {
         font-size: 25px;
     }
-    #h_news {
-        font-size: 45px;
-    }
-    #about_news {
-        flex-direction: column;
-    }
-    #text_first_div {
-        padding: 70px 20px 100px;
-    }
     .buttons_black_div {
         width: 70%;
-    }
-    #link_h {
-        display: inline-block;
-        font-size: 22px;
-        height: 60px;
     }
     #all_boxes {
         gap: 72px;
@@ -519,11 +533,58 @@ footer {
     .buttons_black_div {
         margin-top: 3px;
     }
+    .big_text_near_scroll {
+        font-size: 32px;
+    }
+    #with_scroll .container {
+        gap: 24px;
+    }
+    #scrolled {
+        width: 49%;
+    }
+    .little_text_near_scroll {
+        margin-top: 22px;
+    }
+    #insights {
+        display: flex;
+        gap: 50px;
+    }
+    #news_div {
+        width: 28%;
+    }
+    #all_boxes {
+        gap: 42px;
+    }
+    #news_div {
+        width: 71%;
+    }
+    #text_in_news {
+        font-size: 16px;
+        margin-top: 10px;
+    }
 }
 
 @media screen and (max-width:768px) {
-    #first_div_under_news {
-        flex-direction: column-reverse;
+    #four_boxes {
+        margin-top: 20px;
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+    }
+    #with_scroll {
+        margin-top: 70px;
+        position: relative;
+        padding-bottom: 50px;
+    }
+    .h4_in_box {
+        font-size: 20px;
+    }
+    .background_color {
+        background-color: #F9F9F9;
+        padding-bottom: 70px;
+    }
+    .box {
+        width: 100%;
     }
     .column_link {
         flex-direction: column;
@@ -547,12 +608,6 @@ footer {
     }
     .link_footer_second {
         width: 60%;
-    }
-    #text_first_div {
-        width: 100%;
-    }
-    #img_first_div {
-        width: 100%;
     }
     #boxes_imgs {
         width: 100%;
@@ -583,12 +638,43 @@ footer {
     .abouts {
         margin-top: 5px;
     }
+    #with_scroll .container {
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+    }
+    #not_scrolled {
+        position: static;
+        width: 100%;
+    }
+    #scrolled {
+        width: 100%;
+    }
+    .text_in_scroll {
+        margin-top: 10px;
+        padding-bottom: 10px;
+    }
+    .big_text_near_scroll {
+        font-size: 35px;
+    }
+    .little_text_near_scroll {
+        margin-top: 12px;
+    }
+    #insights {
+        display: flex;
+        flex-direction: column;
+        gap: 0px;
+    }
+    #news_div {
+        width: 100%;
+    }
+    #all_boxes {
+        margin-top: 35px;
+        gap: 40px;
+    }
 }
 
 @media screen and (max-width:500px) {
-    #div_insights {
-        margin-top: 108px;
-    }
     .box_in_footer {
         width: 100%;
     }
@@ -612,15 +698,8 @@ footer {
     .margin {
         margin-bottom: 18px;
     }
-    #first_div_under_news {
-        display: flex;
-        margin-top: 29px;
-    }
     .text_black_div {
         font-size: 40px;
-    }
-    #span_under_news {
-        margin-top: 90px;
     }
     .link_button {
         width: 90%;
@@ -634,18 +713,6 @@ footer {
     }
     .container {
         max-width: 300px;
-    }
-    #load_more {
-        height: 100px;
-    }
-    #h3_under_news a {
-        font-size: 28px;
-        font-weight: 500;
-        width: 88%;
-        line-height: 27px;
-    }
-    #text_first_div {
-        padding: 21px 20px 34px;
     }
     #all_boxes {
         gap: 20px;
